--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.22"
